<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/COLOR_white_ffffff"
    android:orientation="vertical">

    <TextView
        android:id="@+id/evaluation_module_welcome_degree"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/evaluation_module_welcome_degree"
        android:textColor="@color/COLOR_BLACK_333333"
        android:gravity="center"
        android:textSize="14sp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#EBECF0"
        android:layout_marginHorizontal="16dp"
        />

    <RelativeLayout
        android:id="@+id/evaluation_module_price_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_centerInParent="true"
            android:gravity="center">

            <TextView
                android:id="@+id/evaluation_module_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/evaluation_module_price"
                android:textColor="@color/COLOR_BLACK_333333"
                android:textSize="14sp"
                />
            <ImageView
                android:id="@+id/evaluation_module_price_iv"
                android:layout_width="10dp"
                android:layout_height="12dp"
                android:src="@drawable/evaluation_module_price_down"
                />

        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#EBECF0"
        android:layout_marginHorizontal="16dp"
        />

    <TextView
        android:id="@+id/evaluation_module_time"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/evaluation_module_time"
        android:textColor="@color/COLOR_BLACK_333333"
        android:gravity="center"
        android:textSize="14sp"
        />

</LinearLayout>
