<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dip270"
    android:layout_height="@dimen/dip160"
    android:background="@drawable/bg_soild_ffffff_r8">

    <TextView
        android:id="@+id/tv_title"
        style="@style/wrap_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dip15"
        android:text="过期提醒"
        android:textColor="@color/COLOR_BLACK_333333"
        android:textSize="@dimen/font18"
        android:textStyle="bold" />

    <TextView
        style="@style/wrap_layout"
        android:layout_below="@+id/tv_title"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/dip13"
        android:layout_marginTop="@dimen/dip10"
        android:layout_marginRight="@dimen/dip13"
        android:gravity="center"
        android:text="@string/evaluation_module_re_apply_notice"
        android:textColor="@color/COLOR_BLACK_333333"
        android:textSize="@dimen/font14" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dip49"
        android:layout_alignParentBottom="true">

        <View
            style="@style/match_height_1"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dip48"
            android:background="@color/COLOR_GRAY_CCCCCC" />

        <TextView
            android:id="@+id/tv_cancle"
            style="@style/match_layout"
            android:layout_marginTop="@dimen/dip1"
            android:layout_toLeftOf="@+id/view_line"
            android:gravity="center"
            android:text="@string/evaluation_module_cancle"
            android:textColor="@color/COLOR_GRAY_999999"
            android:textSize="@dimen/font18" />

        <View
            android:id="@+id/view_line"
            android:layout_width="@dimen/dip1"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dip1"
            android:background="@color/COLOR_GRAY_CCCCCC" />

        <TextView
            android:id="@+id/tv_confirm"
            style="@style/match_layout"
            android:layout_marginTop="@dimen/dip1"
            android:layout_toRightOf="@+id/view_line"
            android:gravity="center"
            android:text="@string/evaluation_module_ok"
            android:textColor="@color/COLOR_BLUE_3E86FE"
            android:textSize="@dimen/font18" />
    </RelativeLayout>

</RelativeLayout>